# GP-Client

./: .gitignore  README.md  manifest.json
launcher/: brand.json  package-lock.json  package.json
launcher/scripts/: rename-installer.cjs  svg-to-icon.cjs
launcher/src/: App.css  App.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: brand.rs  lib.rs  profile_import.rs  server_status.rs  settings.rs  skin.rs  updates.rs
launcher/src-tauri/src/auth/: cache.rs  config.rs  error.rs  minecraft.rs  mod.rs  oauth.rs  pkce.rs  xbox.rs
launcher/src-tauri/src/fabric/: mod.rs
launcher/src-tauri/src/installations/: layout.rs  links.rs  meta.rs  mod.rs
launcher/src-tauri/src/launch/: java.rs  mod.rs
launcher/src-tauri/src/mods/: github.rs  manifest.rs  mod.rs  selection.rs  state.rs
launcher/src-tauri/src/mojang/: download.rs  meta.rs  mod.rs  rules.rs
launcher/src/components/: AccountBox.tsx  ChangeSkinDialog.tsx  Dropdown.tsx  EditInstallationDialog.tsx  FriendsPanel.tsx  ImportProfileDialog.tsx  InstallationsView.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  ModsDialog.tsx  PlayView.tsx  SettingsView.tsx  Sidebar.tsx  SkinRender.tsx  SkinSidebar.tsx  Tooltip.tsx  TopNav.tsx  UpdateIndicator.tsx  WhatsNewDialog.tsx  WhatsNewView.tsx
launcher/src/config/: brand.ts  servers.ts
launcher/src/hooks/: useAccount.ts  useSettings.ts
launcher/src/lib/: auth.ts  installations.ts  launch.ts  mods.ts  profileImport.ts  serverStatus.ts  settings.ts  skin.ts  updates.ts  versions.ts
